# auto-reels

./: .env.example  .gitignore  channels.json  download_videos.py  pyproject.toml  regen_pending.py  run_all_prompts.py  run_daily.bat  test_ingredients.py
.claude/: settings.local.json
src/auto_reels/: channels.py  cli.py  config.py  output.py
src/auto_reels/claude/: web.py
src/auto_reels/editing/: compose.py  subtitles.py
src/auto_reels/gemini/: agent.py  system_prompt.txt
src/auto_reels/image_gen/: webhook.py
src/auto_reels/narration/: elevenlabs.py  minimax.py
src/auto_reels/sync/: dotti.py
src/auto_reels/transcription/: rapidapi.py  service.py  youtube_transcript.py  ytdlp.py
src/auto_reels/video_gen/: flow.py  glabs.py
src/auto_reels/youtube/: api.py  shorts.py
